--- a/styles/_conteiner.scss
+++ b/styles/_conteiner.scss
@@ -5,4 +5,7 @@
     background-blend-mode: saturation;
     width: 100%;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 15fr;
 }
