--- a/styles/_slider.scss
+++ b/styles/_slider.scss
@@ -1,84 +1,41 @@
-.slider-container {
-    max-width: 50%;
+.slider {
+    max-width: 500px;
     position: relative;
-    margin: auto;
+    padding: 0.9rem calc((50vw - 1200px)/2);
+    margin: auto 5px auto auto;
+    text-align: left;
+    &__item {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1s;
+        animation-name: fade;
+        animation-duration: 1s;
+    }
+    &__text {
+        display: flex;
+        margin: auto;
+        color: #fff;
+        justify-content: right;
+    }
 }
-
-
-/* Next & previous buttons */
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: rgb(255, 15, 15);
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-
-/* Position the "next button" to the right */
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-
-/* On hover, add a black background color with a little bit see-through */
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(226, 8, 8, 0.8);
-}
-
-
-/* Caption text */
-
-.text {
-    color: #ff0909;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-
-/* The dots/bullets/indicators */
 
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
+    height: 20px;
+    width: 20px;
+    background-color: rgb(148, 75, 75);
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
+    margin: 10px;
     transition: background-color 0.6s ease;
+}
+
+.slider__dot {
+    align-self: center;
 }
 
 .active,
 .dot:hover {
-    background-color: #717171;
-}
-
-
-/* Fading animation */
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+    background-color: #fa0303;
 }
 
 @-webkit-keyframes fade {
