--- a/styles/_conteiner.scss
+++ b/styles/_conteiner.scss
@@ -1,11 +1,15 @@
 @import 'media-queries';
 .conteiner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(/img/Layer66.png);
-    background-size: cover;
-    background-blend-mode: saturation;
+    background: url(/img/Layer70.png) left no-repeat, linear-gradient(rgba(0, 0, 0, 0.748), rgba(0, 0, 0, 0.679)), url(/img/Layer66.png) right no-repeat;
+    background-blend-mode: screen;
+    background-size: 50% 100%;
     width: 100%;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 15fr;
+    @include tablet {
+        display: block;
+        background-size: 100%;
+    }
 }
