--- a/styles/_slider.scss
+++ b/styles/_slider.scss
@@ -10,32 +10,63 @@
         animation-name: fade;
         animation-duration: 1s;
     }
+    &__title {
+        color: #fff;
+        font-size: 3.5rem;
+        margin: auto auto 10px auto;
+        text-transform: uppercase;
+        @include tablet {
+            font-size: 2.5rem;
+            margin: 60px 5px auto 5px;
+            text-align: center;
+        }
+        &--sub {
+            color: #fff;
+            font-size: 2rem;
+            text-transform: uppercase;
+            @include tablet {
+                font-size: 1.5rem;
+                margin: 20px 5px auto 5px;
+                text-align: center;
+            }
+        }
+    }
     &__text {
         display: flex;
-        margin: auto;
+        margin: 20px auto auto auto;
         color: #fff;
-        justify-content: right;
+        line-height: 1.5rem;
+        @include tablet {
+            margin: 30px 5px auto 5px;
+            text-align: justify;
+        }
     }
 }
 
 .dot {
     cursor: pointer;
-    height: 20px;
-    width: 20px;
-    background-color: rgb(148, 75, 75);
+    height: 13px;
+    width: 13px;
+    background-color: rgb(255, 255, 255);
     border-radius: 50%;
     display: flex;
     margin: 10px;
     transition: background-color 0.6s ease;
+    @include tablet {
+        display: inline-block;
+    }
 }
 
 .slider__dot {
     align-self: center;
+    @include tablet {
+        text-align: center;
+    }
 }
 
 .active,
 .dot:hover {
-    background-color: #fa0303;
+    background-color: #ff0000;
 }
 
 @-webkit-keyframes fade {
