--- a/styles/_slider.scss
+++ b/styles/_slider.scss
@@ -10,6 +10,18 @@
         animation-name: fade;
         animation-duration: 1s;
     }
+    &__border {
+        margin-top: 20px;
+        width: 100px;
+        border: none;
+        height: 6px;
+        border-radius: 5px;
+        background: #fff;
+        @include tablet {
+            width: 95%;
+            margin: 20px auto auto auto;
+        }
+    }
     &__title {
         color: #fff;
         font-size: 3.5rem;
@@ -54,6 +66,7 @@
     transition: background-color 0.6s ease;
     @include tablet {
         display: inline-block;
+        margin-bottom: 60px;
     }
 }
 
