--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,8 @@
   .conteiner {
     display: block;
     background-size: 100%;
+    background-size: cover;
+    height: 100%;
   }
 }
 
@@ -163,6 +165,22 @@
   animation-duration: 1s;
 }
 
+.slider__border {
+  margin-top: 20px;
+  width: 100px;
+  border: none;
+  height: 6px;
+  border-radius: 5px;
+  background: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .slider__border {
+    width: 95%;
+    margin: 20px auto auto auto;
+  }
+}
+
 .slider__title {
   color: #fff;
   font-size: 3.5rem;
@@ -225,6 +243,7 @@
 @media screen and (max-width: 768px) {
   .dot {
     display: inline-block;
+    margin-bottom: 60px;
   }
 }
 
@@ -260,6 +279,192 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+.client {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5rem calc((100vw - 1200px)/2);
+  height: 130px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: linear-gradient(110deg, #F8F8F8 30%, #5ac7fa00 30%);
+  width: 100%;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .client {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin: auto;
+    padding-top: 40px;
+    text-align: center;
+    height: 100%;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, #F8F8F8), color-stop(10%, #5ac7fa00));
+    background: linear-gradient(180deg, #F8F8F8 20%, #5ac7fa00 10%);
+  }
+}
+
+.client__title {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.client__link {
+  text-decoration: none;
+  color: orange;
+  font-weight: bold;
+}
+
+.client__link i {
+  margin-left: 10px;
+}
+
+.client__customer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto 50px auto auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .client__customer {
+    display: inline-block;
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+.client__customer--item {
+  margin: auto 40px auto auto;
+}
+
+@media screen and (max-width: 768px) {
+  .client__customer--item {
+    margin: 10px auto auto auto;
+  }
+}
+
+.industries {
+  padding: 0.5rem calc((100vw - 1200px)/2);
+  background: -webkit-gradient(linear, left top, right top, from(transparent), to(#2b2a2a)), url("/img/Clip.png");
+  background: linear-gradient(to right, transparent, #2b2a2a), url("/img/Clip.png");
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 12% 10%;
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 768px) {
+  .industries {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.industries__info {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__info {
+    background-color: rgba(220, 218, 218, 0.9);
+    padding: 10px;
+  }
+}
+
+.industries__title {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__title {
+    text-align: center;
+    font-size: 3rem;
+  }
+}
+
+.industries__title--sub {
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__title--sub {
+    text-align: center;
+  }
+}
+
+.industries__border {
+  border: none;
+  background-color: orangered;
+  height: 5px;
+  margin-bottom: 20px;
+  width: 100px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__border {
+    width: 95%;
+    margin: 20px auto 20px auto;
+  }
+}
+
+.industries__text {
+  margin-bottom: 30px;
+  line-height: 30px;
+  font-size: 1.1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__text {
+    text-align: center;
+  }
+}
+
+.industries__button {
+  border: none;
+  background-color: grey;
+  padding: 25px 30px;
+  font-size: 1.1rem;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .industries__button {
+    margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
