--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,8 @@
 @import "media-queries";
 @import "navbar";
 @import "slider";
+@import "client";
+@import "industries";
 * {
     box-sizing: border-box;
     margin: 0;
