--- a/styles/_conteiner.scss
+++ b/styles/_conteiner.scss
@@ -9,7 +9,8 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 15fr;
     @include tablet {
-        display: block;
+        display: flex;
+        flex-direction: column;
         background-size: 100%;
         background-size: cover;
         height: 100%;
