--- a/styles/_industries.scss
+++ b/styles/_industries.scss
@@ -1,11 +1,11 @@
 .industries {
     padding: 0.5rem calc((100vw - 1200px)/2);
-    background: linear-gradient(to right, transparent, rgb(0, 0, 0)), linear-gradient() url("/img/Clip.png");
+    background: linear-gradient(to right, transparent), url("/img/Clip.png");
     height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 12% 10%;
+    background-position: 50% 50%;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -16,7 +16,7 @@
         grid-column-start: 2;
         align-self: center;
         @include tablet {
-            background-color: rgba(220, 218, 218, 0.9);
+            background-color: rgba(220, 218, 218, 0.8);
             padding: 10px;
         }
     }
