--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,7 @@
 @import "slider";
 @import "client";
 @import "industries";
+@import "experience";
 * {
     box-sizing: border-box;
     margin: 0;
