--- a/styles/_experience.scss
+++ b/styles/_experience.scss
@@ -47,11 +47,11 @@
         }
     }
     &__info {
-        margin: 100px 0;
+        margin: 100px 5px;
         align-items: center;
         position: relative;
         @include tablet {
-            margin: 30px 0;
+            margin: 30px 5px;
         }
     }
     &__title {
