--- a/styles/style.css
+++ b/styles/style.css
@@ -563,7 +563,7 @@
 }
 
 .experience__info {
-  margin: 100px 0;
+  margin: 100px 5px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -572,7 +572,7 @@
 
 @media screen and (max-width: 768px) {
   .experience__info {
-    margin: 30px 0;
+    margin: 30px 5px;
   }
 }
 
