--- a/styles/style.css
+++ b/styles/style.css
@@ -1046,6 +1046,182 @@
   }
 }
 
+.guide {
+  padding: 0.5rem calc((100vw - 1200px)/2);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+  background-image: url(/img/Layer80.png);
+  background-repeat: no-repeat;
+  background-position: 10% 50%;
+  background-color: #fcf8f8;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .guide {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    background-size: 70%;
+    background-position: 50% 50%;
+    margin: auto;
+    grid-gap: 0px;
+  }
+}
+
+.guide__info {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 100px auto 100px 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__info {
+    background-color: rgba(237, 232, 230, 0.611);
+    text-align: center;
+    margin: 50px 10px;
+  }
+}
+
+.guide__info--title {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  margin: auto auto 10px auto;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__info--title {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .guide__info--title {
+    font-size: 2rem;
+  }
+}
+
+.guide__info--sub {
+  text-transform: uppercase;
+  margin: 10px auto;
+  font-size: 2.2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__info--sub {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .guide__info--sub {
+    font-size: 1.5rem;
+  }
+}
+
+.guide__info--border {
+  border: none;
+  height: 5px;
+  background-color: orangered;
+  width: 100px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__info--border {
+    width: 100%;
+  }
+}
+
+.guide__info--text {
+  line-height: 2rem;
+  margin: auto auto 30px auto;
+}
+
+@media screen and (max-width: 400px) {
+  .guide__info--text {
+    font-size: 0.9rem;
+    text-align: justify;
+  }
+}
+
+.guide__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__button {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+.guide__button--see {
+  background-color: orangered;
+  padding: 20px 35px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  margin-right: 10px;
+  border-radius: 10px;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__button--see {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .guide__button--see {
+    font-size: 0.7rem;
+    padding: 15px 20px;
+  }
+}
+
+.guide__button--download {
+  background-color: rgba(255, 255, 255, 0);
+  border: 2px solid orangered;
+  border-radius: 10px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  padding: 20px 35px;
+  margin-left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .guide__button--download {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .guide__button--download {
+    font-size: 0.7rem;
+    padding: 15px 20px;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
