--- a/styles/style.css
+++ b/styles/style.css
@@ -1408,6 +1408,160 @@
   margin: 30px auto auto auto;
 }
 
+.contact {
+  padding: 0.5rem calc((85vw - 1200px)/2);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  height: 100%;
+  width: 100%;
+  background-color: palegoldenrod;
+  grid-gap: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .contact {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.contact__first {
+  margin: 50px 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__first {
+    margin: 15px auto;
+  }
+}
+
+.contact__first--link {
+  text-decoration: none;
+  color: orangered;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__first--link {
+    text-align: center;
+  }
+}
+
+.contact__second {
+  margin: 50px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__second {
+    margin: auto;
+  }
+}
+
+.contact__third {
+  margin: 50px 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__third {
+    margin: auto;
+  }
+}
+
+.contact__fourth {
+  margin: auto 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact__title {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__title {
+    margin: auto;
+  }
+}
+
+.contact__text {
+  margin: 10px auto;
+  line-height: 1.5rem;
+}
+
+@media screen and (max-width: 400px) {
+  .contact__text {
+    text-align: center;
+  }
+}
+
+.contact__button {
+  position: relative;
+  background-color: #fff;
+  border: none;
+  padding: 10px;
+  margin-left: -40px;
+  cursor: pointer;
+}
+
+.inputwrapper {
+  display: inline;
+}
+
+@media screen and (max-width: 400px) {
+  .inputwrapper {
+    display: block;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+}
+
+.inputwrapper #email {
+  width: 80%;
+  margin: 10px auto;
+  padding-left: 10px;
+  line-height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
