--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -57,6 +57,11 @@
         cursor: pointer;
         border-radius: 10px;
         text-transform: uppercase;
+        &:hover {
+            background-color: rgb(78, 78, 78);
+            transition: 0.8s;
+            transform: scale(1.05);
+        }
     }
     &__bold {
         font-weight: bold;
