--- a/styles/_conteiner.scss
+++ b/styles/_conteiner.scss
@@ -1,6 +1,6 @@
 @import 'media-queries';
 .conteiner {
-    background: url(/img/Layer70.png) left no-repeat, linear-gradient(rgba(0, 0, 0, 0.748), rgba(0, 0, 0, 0.679)), url(/img/Layer66.png) right no-repeat;
+    background: url(../img/Layer70.png) left no-repeat, linear-gradient(rgba(0, 0, 0, 0.748), rgba(0, 0, 0, 0.679)), url(../img/Layer66.png) right no-repeat;
     background-blend-mode: screen;
     background-size: 50% 100%;
     width: 100%;
