--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -25,6 +25,11 @@
             color: orangered;
             font-weight: bold;
             text-transform: uppercase;
+            &:hover {
+                color: red;
+                transition: 0.5s;
+                transform: scale(1.05);
+            }
             @include phone {
                 text-align: center;
             }
@@ -50,6 +55,10 @@
         margin: auto 5px;
         display: flex;
         flex-direction: column;
+        @include phone {
+            text-align: center;
+            margin-bottom: 20px;
+        }
     }
     &__title {
         text-transform: uppercase;
@@ -59,7 +68,7 @@
         }
     }
     &__text {
-        margin: 10px auto;
+        margin: 10px 0;
         line-height: 1.5rem;
         @include phone {
             text-align: center;
@@ -69,23 +78,19 @@
         position: relative;
         background-color: #fff;
         border: none;
-        padding: 10px;
-        margin-left: -40px;
+        padding: 1px;
+        margin-left: -27px;
         cursor: pointer;
     }
 }
 
 .inputwrapper {
     display: inline;
-    @include phone {
-        display: block;
-        text-align: center;
-        margin-bottom: 30px;
-    }
     & #email {
         width: 80%;
         margin: 10px auto;
         padding-left: 10px;
+        padding-right: 30px;
         line-height: 40px;
         border: none;
         border-radius: 5px;
