--- a/styles/_industries.scss
+++ b/styles/_industries.scss
@@ -1,6 +1,6 @@
 .industries {
     padding: 0.5rem calc((100vw - 1200px)/2);
-    background: linear-gradient(to right, transparent), url("/img/Clip.png");
+    background: linear-gradient(to right, transparent), url(../img/Clip.png);
     height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
@@ -65,6 +65,11 @@
         text-transform: uppercase;
         cursor: pointer;
         border-radius: 10px;
+        &:hover {
+            background-color: rgb(78, 78, 78);
+            transition: 0.5s;
+            transform: scale(1.05);
+        }
         @include tablet {
             margin: auto;
             display: flex;
