--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -4,11 +4,13 @@
     height: 80px;
     justify-content: space-between;
     padding: 0.5rem calc((100vw - 1200px)/2);
-    z-index: 9999;
+    z-index: 1;
     width: 100%;
-    position: sticky;
+    position: fixed;
     top: 0;
     grid-column: 2 span;
+    background-color: rgba(63, 60, 60, 0.926);
+    transition: top 0.5s;
     @include tablet {
         height: 55px;
     }
@@ -35,9 +37,10 @@
                 transition: opacity 0.3s ease-in;
                 z-index: 99;
                 font-size: 1rem;
-                height: 100vh;
+                height: 95vh;
                 width: 150px;
                 padding-bottom: 30px;
+                margin-top: 7px;
                 text-align: center;
             }
         }
@@ -46,13 +49,16 @@
         display: flex;
         align-items: center;
         font-size: 0.8rem;
-        padding: 0 1rem;
+        margin: auto 13px;
+        padding-top: 5px;
+        &:hover {
+            border-top: 3px solid orangered;
+        }
         & a {
             text-decoration: none;
             color: #fff;
             text-transform: uppercase;
             font-weight: bold;
-            margin-left: -10px;
         }
     }
     @include tablet {
