--- a/styles/_news.scss
+++ b/styles/_news.scss
@@ -1,7 +1,7 @@
 .news {
     padding: 0.5rem calc((100vw - 1200px)/2);
     position: relative;
-    background: url("/img/Group8.png");
+    background: url(../img/Group8.png);
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
